adds html file for animation and some css

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+body {                                                                                                                                          
+}
+
+#edu {
+/*  background-image: url(/img/logos/EDU.png);*/
+  background-color: #000;
+  height: 500px;
+  width: 500px;
+}
+
 video {
    position: fixed;
    right: 0;
