--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,25 @@
-body {                                                                                                                                          
+#container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
 }
 
-#edu {
-/*  background-image: url(/img/logos/EDU.png);*/
-  background-color: #000;
-  height: 500px;
-  width: 500px;
+.edupng, .pandl {
+  height: 400px;
+  width: 450px;
+  margin: 0;
+}
+
+img.pandl{
+  width: 680px;
+  margin-left: 55px;
+  margin-right: 50px;
+  margin-top: -385px;
+}
+
+img.edupng {
+  margin-top: 50px;
+  margin-left: 160px;
 }
 
 video {
