--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+#pedul_logo_container {
+  height: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+}
+
 #container {
   margin-left: auto;
   margin-right: auto;
