adds bike not at princeton for background image

--- a/css/agency.css
+++ b/css/agency.css
@@ -430,7 +430,7 @@ bar-default .navbar-toggle {
 }
 
 header {
-	background-image: url(../img/header/library.jpg);
+	background-image: url(../img/header/bike_in_hallway.jpg);
 	background-repeat: none;
 	background-attachment: scroll;
 	background-position: center center;
