--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,14 @@
+html {
+  background-color: #8D6E63;
+}
+
+
 #pedul_logo_container {
   height: 1000px;
   margin-left: auto;
   margin-right: auto;
   width: 800px;
+  font-color: blue;
 }
 
 #container {
