--- a/css/agency.css
+++ b/css/agency.css
@@ -247,6 +247,20 @@ p.user {
 	background: url('../img/ico_loading.gif') no-repeat center center;
 }
 
+div.intro-tagline {
+  margin-bottom: 20px;
+  margin-top: -20px;
+  margin-left: 35px;
+
+}
+
+h2.tagline {
+	text-transform: lowercase;
+  font-size: 25px;
+  color: #FFFAFA;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
